--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   }
   
   .hero {
-    background: url('images/background.jpg') center/cover no-repeat;
+    background: url('images/JEDOT logo.png') center/cover no-repeat;
     padding: 60px 20px;
     text-align: center;
     color: white;
