--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ body {
   margin-bottom: 10px;
 }
 
+.slogan {
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: #fff;
+  font-style: italic;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+}
+
   footer {
     text-align: center;
     padding: 20px;
