--- a/style.css
+++ b/style.css
@@ -84,6 +84,21 @@ body {
   text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
 }
 
+.dress-item a button {
+  background-color: #0070ba;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-weight: bold;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.dress-item a button:hover {
+  background-color: #005a9e;
+}
+
   footer {
     text-align: center;
     padding: 20px;
