--- a/style.css
+++ b/style.css
@@ -185,6 +185,22 @@ main {
   margin-bottom: 15px;
 }
 
+/* PayPal button unified style */
+.paypal-btn {
+  text-align: center;
+  border: none;
+  border-radius: 0.25rem;
+  min-width: 11.625rem;
+  padding: 0 2rem;
+  height: 2.625rem;
+  font-weight: bold;
+  background-color: #FFD140;
+  color: #000;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  cursor:
+
 footer {
   text-align: center;
   padding: 20px;
