--- a/style.css
+++ b/style.css
@@ -207,6 +207,18 @@ main {
   background-color: #f1c232;
 }
 
+@media (max-width: 700px) {
+  .book-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .book-cover img {
+    width: 70%;
+    max-width: 250px;
+  }
+}
+
 footer {
   text-align: center;
   padding: 20px;
@@ -214,5 +226,6 @@ footer {
   color: white;
   margin-top: 40px;
 }
+
 
 
